--- a/.github/workflows/gh-copilot-onboarding.yaml
+++ b/.github/workflows/gh-copilot-onboarding.yaml
@@ -6,6 +6,11 @@ on:
         description: 'Email address of user to onboard'
         required: true
 
+env:
+  EMAIL_DOMAIN: contoso.com
+  GITHUB_ORG: contoso
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   onboard:
     runs-on: ubuntu-latest
@@ -14,18 +19,17 @@ jobs:
         uses: actions/checkout@v2
       - name: Validate email domain
         run: |
-          if [[ "${{ github.event.inputs.email }}" != *@contoso.com ]]; then
-            # Check if the email domain is contoso.com
-            echo "Invalid email domain. Only contoso.com emails are allowed."
+          if [[ "${{ github.event.inputs.email }}" != *@${{ env.EMAIL_DOMAIN }} ]]; then
+            echo "Invalid email domain. Only ${{ env.EMAIL_DOMAIN }} emails are allowed."
             exit 1
           else
             echo "Email domain validated successfully."
           fi
       - name: Add user to Copilot
         run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          curl -X POST -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
           -d '{"email": "${{ github.event.inputs.email }}"}' \
-          https://api.github.com/orgs/your-org/copilot/subscription
+          https://api.github.com/orgs/${{ env.GITHUB_ORG }}/copilot/subscription
           if [ $? -eq 0 ]; then
             echo "User onboarded successfully."
           else
@@ -34,7 +38,7 @@ jobs:
           fi
       - name: Notify user
         run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          curl -X POST -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
           -d '{"email": "${{ github.event.inputs.email }}", "message": "You have been onboarded to Copilot!"}' \
           https://api.github.com/notifications
           if [ $? -eq 0 ]; then
