--- a/.github/workflows/gh-copilot-onboarding.yaml
+++ b/.github/workflows/gh-copilot-onboarding.yaml
@@ -27,9 +27,10 @@ jobs:
           fi
       - name: Add user to Copilot
         run: |
-          curl -X POST -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
-          -d '{"email": "${{ github.event.inputs.email }}"}' \
-          https://api.github.com/orgs/${{ env.GITHUB_ORG }}/copilot/subscription
+          curl -X PUT -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github+json" \
+          https://api.github.com/orgs/${{ env.GITHUB_ORG }}/copilot/billing/selected_users \
+          -d '{"selected_usernames":["${{ github.event.inputs.email }}"]}'
           if [ $? -eq 0 ]; then
             echo "User onboarded successfully."
           else
@@ -39,8 +40,9 @@ jobs:
       - name: Notify user
         run: |
           curl -X POST -H "Authorization: token ${{ env.GITHUB_TOKEN }}" \
-          -d '{"email": "${{ github.event.inputs.email }}", "message": "You have been onboarded to Copilot!"}' \
-          https://api.github.com/notifications
+          -H "Accept: application/vnd.github+json" \
+          https://api.github.com/repos/${{ env.GITHUB_ORG }}/github-copilot-self-service-onboarding/dispatches \
+          -d '{"event_type":"copilot_onboarding","client_payload":{"email":"${{ github.event.inputs.email }}","message":"You have been onboarded to Copilot!"}}'
           if [ $? -eq 0 ]; then
             echo "User notified successfully."
           else
